--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: An R package contains Indonesia holiday date function and reference
 URL: http://github.com/rasyidstat/liburrr
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.0.1
